Fix: JAR 실행 시 발생 문제 해결