@@ -10,6 +10,7 @@ import http.response.StatusLine;
 
 import java.io.IOException;
 
+import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -20,10 +21,10 @@ public class StaticHandler implements Handler {
 
     @Override
     public void handle(HttpRequest request, HttpResponse response) throws URISyntaxException, IOException {
-        Path path = Paths.get(StaticHandler.class.getClassLoader().getResource("static" + request.getPath()).toURI());
-        byte[] bytes = Files.readAllBytes(path);
+        InputStream is = StaticHandler.class.getClassLoader().getResourceAsStream("static" + request.getPath());
+        byte[] bytes = is.readAllBytes();
         StatusLine statusLine = StatusLine.from(request.getRequestStartLine().getVersion(), HttpStatus.OK);
-        String contentType = Files.probeContentType(path);
+        String contentType = "image/png";
         HttpHeader headers = HttpHeader.createResponseHeaders(contentType, bytes.length);
         ResponseBody responseBody = new ResponseBody(bytes);
         response.setStatusLine(statusLine);
